tests/NormalTests/paczka2/big_fuzzy/12665628.err
Error in line 1: p7seJa A720 99,6
Error in line 7: oFfLTQdxw A813 3,8
Error in line 34: A813 S694 339,41
Error in line 26: p7seJa A720 8,1
Error in line 41: oFfLTQdxw A813 76,9
Error in line 38: A813 S694 26,0
Error in line 49: A813 A720 95,5
Error in line 58: Q2NMbYGS3IA A889 98,5
Error in line 52: p7seJa A813 3,9
Error in line 64: fXf2u4Yxp A889 51,9
Error in line 67: zwyYDH S694 45,7
Error in line 66: fXf2u4Yxp A720 59,2
Error in line 62: oFfLTQdxw S694 4,2
Error in line 80: A813 A813 54,0
Error in line 83: Q2NMbYGS3IA S694 41,9
Error in line 85: Q2NMbYGS3IA A813 28,1
Error in line 89: Q2NMbYGS3IA A720 17,9
Error in line 65: p7seJa A889 91,8
Error in line 108: zwyYDH S694 62,7
Error in line 116: Q2NMbYGS3IA A889 70,8
Error in line 149: Q2NMbYGS3IA A889 22,9
Error in line 161: A813 A889 171,71
Error in line 166: Q2NMbYGS3IA S694 62,19
Error in line 175: p7seJa S694 -3,2
Error in line 164: Q2NMbYGS3IA A720 66,3
Error in line 180: DeBZMq9xpw1 A889 1,8
Error in line 188: A813 A813 15,6
Error in line 177: Q2NMbYGS3IA S694 289,3
Error in line 187: oFfLTQdxw A720 49,2
Error in line 203: fXf2u4Yxp A889 97,5
Error in line 208: DeBZMq9xpw1 A720 31,91
Error in line 210: DeBZMq9xpw1 A889 10,3
Error in line 226: oFfLTQdxw A889 13,2
Error in line 227: A813 A720 85,0
Error in line 218: zwyYDH A889 10,4
Error in line 207: p7seJa A720 33,3
Error in line 246: oFfLTQdxw A720 95,1
